Fixes banner resizing issue on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ h5 {
   #banner p {
     color: #FFFFFF; }
   #banner .vert-center {
-    position: relative;
+    position: absolute;
     top: 50%;
     transform: translateY(-50%); }
 
@@ -252,7 +252,8 @@ h5 {
     background-color: #fff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
     -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1); }
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    overflow: visible; }
     #companies .company-wrapper .company img {
       border-bottom: 2px solid #F8F9F9;
       width: 100%;
@@ -266,7 +267,8 @@ h5 {
     -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
     transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
     -webkit-transform: scale(1.02, 1.02);
-    transform: scale(1.02, 1.02); }
+    transform: scale(1.02, 1.02);
+    overflow: visible; }
   @media only screen and (min-width: 40.063em) and (max-width: 64em) {
     #companies .company-wrapper .company {
       height: 460px !important; } }
@@ -335,7 +337,7 @@ h5 {
   #footer span {
     font-size: 12px; }
   #footer .open-source {
-    color: #ED5565; }
+    color: #ED5565 !important; }
 
 .social-link {
   color: #B8BDC4 !important; }
